[#9078] Stabilized batch-job for cleaning inactive agents